--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^2.6.5",
+    "dotenv": "^8.2.0",
     "vue": "^2.6.10",
     "vue-analytics": "^5.22.1",
     "vue-router": "^3.0.3",
