--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "clean": "rm -rf node_modules/",
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
@@ -16,6 +16,7 @@
     "dotenv": "^8.2.0",
     "vue": "^2.6.10",
     "vue-analytics": "^5.22.1",
+    "vue-clipboard2": "^0.3.1",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1",
     "vuex-persist": "^2.2.0"
